# ospray

./: .gitignore  CMakeLists.txt  OsprayConfig.cmake.in  UseOspray.cmake
.github/workflows/: ccpp.yml
cmake/compiler/: ispc.cmake
cmake/ospray_cmake_config/: osprayConfig.cmake.in
modules/cpu/: CMakeLists.txt
modules/cpu/common/: World.cpp  World.h  World.ih  WorldShared.h
modules/cpu/render/: registration.cpp
modules/cpu/render/sh/: SphHarm.cpp  SphHarm.h  SphHarm.ih  SphHarm.ispc  SphHarmData.cpp  SphHarmDataShared.h  SphHarmShared.h  lightAlpha.ispc  surfaces.ih  surfaces.ispc  volumes.ih  volumes.ispc
modules/tensorGlyphs/: CMakeLists.txt
modules/tensorGlyphs/ospray/: CMakeLists.txt  moduleInit.cpp
modules/tensorGlyphs/ospray/geometry/: Ellipsoids.cpp  Ellipsoids.h  Ellipsoids.ispc
scripts/superbuild/: CMakeLists.txt  build_ospray.cmake
scripts/superbuild/dependencies/: dep_glfw.cmake
